# voice-to-insights

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  gunicorn_conf.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  start.sh  tox.ini
.github/workflows/: test.yml
.streamlit/: config.toml
app/: Dockerfile  conftest.py  constants.py  core.py  main.py  recorder.py  setup_pytorch.py  summarizer.py  transcriber.py  utils.py  warmup_models.py
app/tests/: test_core.py
assets/: demo.webm  voice-notes-summary-demo.webm
backend/: Dockerfile  main.py  requirements.txt
backend/tests/: test_gpt_utils.py  test_main.py  test_whisper_utils.py
backend/utils/: gpt.py  whisper.py
frontend/: Dockerfile  app.py
scripts/: setup.sh  start.sh
