[project]
name = "voice-to-insight"
version = "0.1"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
exclude = ["__pycache__", ".tox", ".venv", "tests/data", "temp", ".pytest_cache", "mypy_cache"]
select = ["E", "W", "F", "C"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.mypy]
exclude = "(^|/)(tests|docs|build|dist|__pycache__|venv|.venv|.tox)/"
ignore_missing_imports = true
