[project]
name = "voice-notes-to-summary"
version = "1.0"
description = "Summarizes transcribed voice notes."
authors = ["Keisha Louise Vivien Berondo Bunane <devvien.xyz@gmail.com>"]
packages = [
    { include = "app" }
]

[tool.poetry]
package-mode = false

[tool.ruff]
line-length = 120

[tool.ruff.lint]
exclude = ["__pycache__", ".tox", ".venv", "tests/data", "temp", ".pytest_cache", "mypy_cache"]
select = ["E", "W", "F", "C"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.mypy]
exclude = "(^|/)(tests|docs|build|dist|__pycache__|venv|.venv|.tox)/"
ignore_missing_imports = true

[tool.coverage.run]
omit = [
    "*/__pycache__/*",
    "*/tests/*",
    "temp/*",
    "*/venv/*",
    "*/.tox/*",
    "*/migrations/*",
    "*/__init__.py",
    "*/app/setup_pytorch.py",
    "*/app/warmup_models.py",
    "*/conftest.py"
]
